# ecir26-score-distribution-model

./: .gitignore  LICENSE  README.md  pyproject.toml
src/sdm/: config.py  sdm.py  utils.py
src/sdm/cli/: compute_empirical_results.py  compute_score_distributions.py  evaluate.py  fit.py
src/sdm/cli/visualize/: distribution.py  line_chart.py  prediction.py
src/sdm/model_wrappers/: AbstractModelWrapper.py  GenericModelWrapper.py  JinaV3Wrapper.py  MultilingualE5Wrapper.py  SnowflakeWrapper.py  __init__.py  utils.py
